Issue #18765: Fixed problem with scrollbar covering comments button in Firefox/Safari.

--- a/source/less/screen.less
+++ b/source/less/screen.less
@@ -806,7 +806,7 @@ body {
 }
 
 .xv-picker {
-  width: 180px;
+  width: 160px;
   text-align: left;
 }
 
